schedulers/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: frontend-ingress
spec: 
  rules: 
    - host: socks.example.com
      http: 
        paths: 
          - path: /
            backend: 
              serviceName: front-end
              servicePort: http
